--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
-Theme Name: asu_s
+Theme Name: asu_s_wordpress_theme
 Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 Author: Cronkite School IT
 Author URI: https://jrnops.jmc.asu.edu
 Description: An ASU Standards inspired theme based on <code>_s</code>, or <em>underscores</em>.
-Version: 1.2.0
+Version: 1.2.1
 GitHub Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 GitHub Branch: master
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: asu_s
+Text Domain: asu_s_wordpress_theme
 Tags: black, white, maroon, gold, grey, one-column, two-columns,full-width-template,  right-sidebar, left-sidebar, flexible-width, theme-options, custom-menu, responsive-layout
 
 This theme, like WordPress, is licensed under the GPL.
