rearrange color variables in scss file.

--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,31 +1,35 @@
 //colors
 // Names generated with http://chir.ag/projects/name-that-color/ where appropriate.
 $white: #fff;
-$color_tuatara: #353535;
-$color_wild_sand: #f5f5f5;
-$color_alto: #d7d7d7;
-$color_soft_peach: #f9f2f4;
 $color_shalimar: #fff9c0;
-
-$color_shark: #2a2a2a;
+$color_sun: #ffb310;
+$color_sandy_brown: #f0ad4e;
+$color_gold_drop: #f47c00;
 $color_jelly_bean: #21759b;
-$color_emperor: #505050;
+$color_cerulean: #008ed6;
+$color_navy_blue: #008;
+$color_vida_loca: #568e14;
+$color_soft_peach: #f9f2f4;
 $color_paprika: #903;
 $color_brick_red: #d23153;
 $color_maroon_flush: #c7254e;
 
-$color_nobel: #b7b7b7;
-$color_gray: #919191;
-$color_silver: #ccc;
-$color_dove_gray: #666;
-$color_black: #000;
-$color_navy_blue: #008;
-$color_sun: #ffb310;
-$color_mine_shaft: #1f1f1f;
+// grays
+$color_alabaster: #fafafa;
+$color_wild_sand: #f5f5f5;
 $color_seashell: #f1f1f1;
 $color_mercury: #e9e9e9;
-$color_alabaster: #fafafa;
-$color_cod_gray: #1e1e1e;
+$color_alto: #d7d7d7;
+$color_silver: #ccc;
+$color_nobel: #b7b7b7;
 $color_silver_chalice: #a9a9a9;
+$color_gray: #919191;
+$color_dove_gray: #666;
+$color_emperor: #505050;
 $color_abbey: #4f5557;
+$color_tuatara: #353535;
+$color_shark: #2a2a2a;
+$color_cod_gray: #1e1e1e;
+$color_mine_shaft: #1f1f1f;
+$color_black: #000;
 
