--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -18,10 +18,45 @@
     list-style: none;
     margin: 0;
     padding-left: 0;
+    ul {
+      box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+      float: left;
+      position: absolute;
+      top: 2.4em;
+      left: -999em;
+      z-index: 99999;
+      :hover > a, .focus > a {}
+      a {
+        &:hover, &.focus {
+          background-color: black;
+          color: $white;
+        }
+        width: 200px;
+      }
+      li {
+        &:hover > ul, &.focus > ul {
+          left: 100%;
+        }
+      }
+      ul {
+        left: -999em;
+        top: 0;
+      }
+    }
+    li {
+      a:hover {
+        background-color: black;
+        color: $color_sun;
+      }
+    &:hover > ul, &.focus > ul {
+        left: auto;
+      }
+    }
   }
   li {
     float: left;
     position: relative;
+    &:hover > a, &.focus > a {}
   }
   a {
     background-color: transparent;
@@ -33,51 +68,7 @@
     display: block;
     text-decoration: none;
   }
-  ul ul {
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-    float: left;
-    position: absolute;
-    top: 2.4em;
-    left: -999em;
-    z-index: 99999;
-    ul {
-      left: -999em;
-      top: 0;
-    }
-    a {
-      width: 200px;
-    }
-    li {}
-  }
-  li {
-    &:hover > a, &.focus > a {}
-  }
-  ul {
-    ul {
-      :hover > a, .focus > a {}
-      a {
-        &:hover, &.focus {
-          background-color: black;
-          color: $white;
-        }
-      }
-    }
-    li {
-      &:hover > ul, &.focus > ul {
-        left: auto;
-      }
-    }
-    ul li {
-      &:hover > ul, &.focus > ul {
-        left: 100%;
-      }
-    }
-  }
   .current_page_item > a, .current-menu-item > a, .current_page_ancestor > a {}
-  ul > li > a:hover {
-    background-color: black;
-    color: $color_sun;
-  }
   .sub-menu {
     background-color: $color_mine_shaft;
     border: 1px solid black;
