--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@ a:visited {
 
 .main-navigation {
   position: relative;
-  z-index: 10;
+  z-index: 20;
 }
 .main-navigation ul {
   display: none;
@@ -591,6 +591,38 @@ a:visited {
   list-style: none;
   margin: 0;
   padding-left: 0;
+}
+.main-navigation ul ul {
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  float: left;
+  position: absolute;
+  top: 2.4em;
+  left: -999em;
+  z-index: 99999;
+}
+.main-navigation ul ul a {
+  width: 200px;
+}
+.main-navigation ul ul a:hover, .main-navigation ul ul a.focus {
+  background-color: black;
+  color: #fff;
+}
+.main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
+  left: 100%;
+}
+.main-navigation ul ul ul {
+  left: -999em;
+  top: 0;
+}
+.main-navigation > ul > li > a:hover {
+  background-color: black;
+  color: #ffb310;
+}
+.main-navigation > ul > li:hover > ul, .main-navigation > ul > li.focus > ul {
+  left: auto;
+}
+.main-navigation > ul > li > ul {
+  /*display: none;*/
 }
 .main-navigation li {
   float: left;
@@ -605,35 +637,6 @@ a:visited {
   padding: 1em 1.5em;
   display: block;
   text-decoration: none;
-}
-.main-navigation ul ul {
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-  float: left;
-  position: absolute;
-  top: 2.4em;
-  left: -999em;
-  z-index: 99999;
-}
-.main-navigation ul ul ul {
-  left: -999em;
-  top: 0;
-}
-.main-navigation ul ul a {
-  width: 200px;
-}
-.main-navigation ul ul a:hover, .main-navigation ul ul a.focus {
-  background-color: black;
-  color: #fff;
-}
-.main-navigation ul li:hover > ul, .main-navigation ul li.focus > ul {
-  left: auto;
-}
-.main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
-  left: 100%;
-}
-.main-navigation ul > li > a:hover {
-  background-color: black;
-  color: #ffb310;
 }
 .main-navigation .sub-menu {
   background-color: #1f1f1f;
@@ -1106,19 +1109,32 @@ article.post {
   transform: scale(1.1);
   /*z-index: -2;*/
   overflow: hidden;
-  /*position: relative;*/
+  position: relative;
 }
 
 #hero-image {
-  z-index: -1;
-  position: relative;
+  z-index: 1;
 }
 
 .hero-text {
-  z-index: 9999;
-  position: relative;
+  text-shadow: rgba(0, 0, 0, 0.7) 1px 1px 1px;
+  z-index: -1;
+  position: absolute;
+  /*width: 100%;*/
+  left: 0;
+  right: 0;
+}
+.hero-text h1 {
+  font-size: 3.5em;
+  font-weight: 600;
+  color: #fff;
 }
 
+@media screen and (min-width: 37.5em) {
+  .hero-text {
+    z-index: 10;
+  }
+}
 .bg {
   background-size: cover;
   height: 100vh;
