--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -31,5 +31,5 @@ $color_tuatara: #353535;
 $color_shark: #2a2a2a;
 $color_cod_gray: #1e1e1e;
 $color_mine_shaft: #1f1f1f;
-$color_black: #000;
+$black: #000;
 
