--- a/sass/site/primary/_site-branding.scss
+++ b/sass/site/primary/_site-branding.scss
@@ -90,7 +90,7 @@
         font-weight: bold;
         text-decoration: none;
         &:first-child {
-          color: $color_black;
+          color: $black;
         }
         &:hover, &:focus {
           text-decoration: underline;
