--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 Author: Cronkite School IT
 Author URI: https://jrnops.jmc.asu.edu
 Description: An ASU Standards inspired theme based on <code>_s</code>, or <em>underscores</em>.
-Version: 1.2.3
+Version: 1.2.4
 GitHub Theme URI: https://github.com/cronkiteschool/asu_s_wordpress_theme
 GitHub Branch: master
 License: GNU General Public License v2 or later
@@ -287,7 +287,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: black;
+  color: #000;
   font-family: inherit;
   font-weight: normal;
   clear: both;
@@ -603,26 +603,26 @@ a:visited {
 .main-navigation ul ul a {
   width: 200px;
 }
-.main-navigation ul ul a:hover, .main-navigation ul ul a.focus {
-  background-color: black;
-  color: #fff;
-}
-.main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
+.main-navigation ul ul li:hover > ul, .main-navigation ul ul li:focus > ul {
   left: 100%;
 }
 .main-navigation ul ul ul {
   left: -999em;
   top: 0;
 }
-.main-navigation > ul > li > a:hover {
-  background-color: black;
+.main-navigation > ul > li:hover > a, .main-navigation > ul > li:focus > a {
   color: #ffb310;
+  background-color: #1f1f1f;
 }
-.main-navigation > ul > li:hover > ul, .main-navigation > ul > li.focus > ul {
+.main-navigation > ul > li:hover > ul, .main-navigation > ul > li:focus > ul {
   left: auto;
 }
 .main-navigation > ul > li > ul {
   /*display: none;*/
+}
+.main-navigation > ul > li > ul > li:hover > a, .main-navigation > ul > li > ul > li:focus > a {
+  color: #fff;
+  background-color: #000;
 }
 .main-navigation li {
   float: left;
@@ -640,7 +640,7 @@ a:visited {
 }
 .main-navigation .sub-menu {
   background-color: #1f1f1f;
-  border: 1px solid black;
+  border: 1px solid #000;
   border-color: transparent;
   border-radius: 0 0 .20em .20em;
   -webkit-box-shadow: none;
@@ -743,10 +743,10 @@ a:visited {
 #input-handheld input:focus {
   outline: none;
 }
-#input-handheld.focus {
+#input-handheld:focus {
   z-index: 20;
 }
-#input-handheld.focus input {
+#input-handheld:focus input {
   left: 0;
   transition: left 0.3s;
 }
