--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ Tags: black, white, maroon, gold, grey, one-column, two-columns,full-width-templ
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-_s is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+asu_s_wordpress_theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
