--- a/sass/navigation/_search.scss
+++ b/sass/navigation/_search.scss
@@ -35,7 +35,7 @@
     margin: 0;
     padding: 0 1em;
     border: none;
-    background-color: #f5f5f5;
+    background-color: $color_wild_sand;
     color: $color_dove_gray;
     font-size: .8em;
     backface-visibility: none;
