--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -37,7 +37,7 @@
       border-bottom: 0;
     }
     &:hover {
-      background-color: #f5f5f5;
+      background-color: $color_wild_sand;
       text-decoration: none;
     }
   }
